Bug 1923029 - installation.firstSeen.* scalars should not be recorded in all process types, r=nalexander,chutten.
Differential Revision: https://phabricator.services.mozilla.com/D224733

UltraBlame original commit: c80bd2a91fa59c6d71518b16b50ed650e5e2a0a5

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -727,7 +727,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -814,7 +814,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -891,7 +891,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -964,7 +964,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -1038,7 +1038,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -1111,7 +1111,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -1188,7 +1188,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -1263,7 +1263,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -1342,7 +1342,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -1421,7 +1421,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
@@ -1500,7 +1500,7 @@ record_in_processes
 :
 -
 '
-all
+main
 '
 record_into_store
 :
