Bug 1922854: Update wgpu to ee0d1703 (2024-10-04). r=webgpu-reviewers,supply-chain-reviewers,nical,ErichDonGubler
Differential Revision: https://phabricator.services.mozilla.com/D224614

UltraBlame original commit: e32945d5964b83289ced7c7edb55bd8424f290a7

--- a/gfx/wgpu_bindings/moz.yaml
+++ b/gfx/wgpu_bindings/moz.yaml
@@ -123,17 +123,19 @@ SSS
 "
 release
 :
-3fda684eb9e69c78b16312a3e927e3ea82e853d1
+ee0d1703e5f4a267ce9b87d50b824190b45b5a79
 (
+Fri
+Oct
+4
+13
+:
+21
+:
+59
 2024
 -
-09
--
-18T15
-:
-01
-:
-51Z
+0400
 )
 .
 #
@@ -156,7 +158,7 @@ preferred
 )
 revision
 :
-3fda684eb9e69c78b16312a3e927e3ea82e853d1
+ee0d1703e5f4a267ce9b87d50b824190b45b5a79
 license
 :
 [
