--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -30910,18 +30910,6 @@ who
 =
 [
 "
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
-"
 Teodor
 Tanasoaia
 <
@@ -30937,6 +30925,18 @@ Gubler
 <
 erichdongubler
 gmail
+.
+com
+>
+"
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
 .
 com
 >
@@ -30968,7 +30968,7 @@ delta
 0
 git
 :
-3fda684eb9e69c78b16312a3e927e3ea82e853d1
+ee0d1703e5f4a267ce9b87d50b824190b45b5a79
 "
 importable
 =
@@ -45974,6 +45974,54 @@ delta
 [
 audits
 .
+unicode
+-
+xid
+]
+]
+who
+=
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+0
+.
+2
+.
+5
+-
+>
+0
+.
+2
+.
+6
+"
+[
+[
+audits
+.
 uniffi
 ]
 ]
@@ -49913,18 +49961,6 @@ who
 =
 [
 "
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
-"
 Teodor
 Tanasoaia
 <
@@ -49940,6 +49976,18 @@ Gubler
 <
 erichdongubler
 gmail
+.
+com
+>
+"
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
 .
 com
 >
@@ -49971,7 +50019,7 @@ delta
 0
 git
 :
-3fda684eb9e69c78b16312a3e927e3ea82e853d1
+ee0d1703e5f4a267ce9b87d50b824190b45b5a79
 "
 importable
 =
@@ -50568,18 +50616,6 @@ who
 =
 [
 "
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
-"
 Teodor
 Tanasoaia
 <
@@ -50595,6 +50631,18 @@ Gubler
 <
 erichdongubler
 gmail
+.
+com
+>
+"
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
 .
 com
 >
@@ -50626,7 +50674,7 @@ delta
 0
 git
 :
-3fda684eb9e69c78b16312a3e927e3ea82e853d1
+ee0d1703e5f4a267ce9b87d50b824190b45b5a79
 "
 importable
 =
@@ -51223,18 +51271,6 @@ who
 =
 [
 "
-Jim
-Blandy
-<
-jimb
-red
--
-bean
-.
-com
->
-"
-"
 Teodor
 Tanasoaia
 <
@@ -51250,6 +51286,18 @@ Gubler
 <
 erichdongubler
 gmail
+.
+com
+>
+"
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
 .
 com
 >
@@ -51281,7 +51329,7 @@ delta
 0
 git
 :
-3fda684eb9e69c78b16312a3e927e3ea82e853d1
+ee0d1703e5f4a267ce9b87d50b824190b45b5a79
 "
 importable
 =
