--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/compat/api/validation/render_pipeline/unsupported_wgsl/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/compat/api/validation/render_pipeline/unsupported_wgsl/cts.https.html.ini
@@ -2026,6 +2026,9 @@ async
 =
 false
 ]
+expected
+:
+FAIL
 [
 :
 format
@@ -2044,6 +2047,9 @@ async
 =
 true
 ]
+expected
+:
+FAIL
 [
 :
 format
@@ -2098,6 +2104,9 @@ async
 =
 false
 ]
+expected
+:
+FAIL
 [
 :
 format
@@ -2116,6 +2125,9 @@ async
 =
 true
 ]
+expected
+:
+FAIL
 [
 :
 format
@@ -2170,6 +2182,9 @@ async
 =
 false
 ]
+expected
+:
+FAIL
 [
 :
 format
@@ -2188,6 +2203,9 @@ async
 =
 true
 ]
+expected
+:
+FAIL
 [
 :
 format
