Bug 1922360 - Duplicate a55 config temporarily to fix naming convention. r=perftest-reviewers,sparky,jmaher
We currently have duplicate mentions of "android" in a few device
configurations. This patch temporarily duplicates the platform with the
fix, so that we can run it for ~2 weeks before removing the old
"incorrect" config. This is to ensure a smooth "migration" and to avoid
abruptly reseting the time series data for A55

Additionally, we remove the '-qr' suffix from the platform name as it is
outdated.

A55 is prioritized first as we are in the process of removing the A51's
and we have more capacity on the A55's at the moment.

After about 2 weeks this will be de-duplicated in bug 1922362

Differential Revision: https://phabricator.services.mozilla.com/D224373

UltraBlame original commit: b48e31d47d1f562424c7693ad93f74ed39251edb

--- a/taskcluster/kinds/test/test-platforms.yml
+++ b/taskcluster/kinds/test/test-platforms.yml
@@ -3093,6 +3093,17 @@ hw
 speedometer
 -
 tests
+#
+Bug
+1922362
+1921607
+-
+Fix
+up
+mobile
+naming
+convention
+soon
 android
 -
 hw
@@ -3154,7 +3165,50 @@ a55
 -
 aarch64
 -
-qr
+shippable
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+aarch64
+-
+shippable
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+speedometer
+-
+tests
+-
+android
+-
+hw
+-
+browsertime
+android
+-
+hw
+-
+a55
+-
+14
+-
+0
+-
+aarch64
 /
 opt
 :
@@ -3171,6 +3225,14 @@ test
 -
 sets
 :
+-
+android
+-
+hw
+-
+speedometer
+-
+tests
 -
 android
 -
