--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -50119,6 +50119,37 @@ set_spidermonkey_pref
 :
 startup
 #
+Experimental
+support
+for
+Joint
+Iteration
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+experimental
+.
+joint_iteration
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+startup
+#
 endif
 /
 /
