Bug 1923056 - Add a new test for shutdown requested after starting request finalization; r=dom-storage-reviewers,asuth
Differential Revision: https://phabricator.services.mozilla.com/D224888

UltraBlame original commit: ba87a3d5133a938f08af430c3aa70c335eb53935

--- a/dom/localstorage/test/unit/xpcshell.toml
+++ b/dom/localstorage/test/unit/xpcshell.toml
@@ -522,6 +522,22 @@ js
 ]
 [
 "
+test_shutdownDuringRequestFinalization
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+true
+"
+]
+[
+"
 test_slowDatabaseInitialization
 .
 js
