Bug 1921952 [wpt PR 48403] - Update wpt metadata, a=testonly
wpt-pr: 48403
wpt-type: metadata

UltraBlame original commit: 2ad28a0be0c10ec8d5c10f37f0b8527901128d9a

--- a/testing/web-platform/meta/compute-pressure/compute_pressure_disconnect.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_disconnect.https.window.js.ini
@@ -3,18 +3,23 @@ compute_pressure_disconnect
 .
 https
 .
-any
-.
-worker
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
+expected
+:
+ERROR
 [
-Call
+Calling
 disconnect
 (
 )
-directly
+immediately
 should
 not
 crash
@@ -32,63 +37,26 @@ changes
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 compute_pressure_disconnect
 .
 https
 .
-any
-.
-sharedworker
+window
 .
 html
+?
+globalScope
+=
+window
 ]
-expected
-:
-if
-tsan
-:
-CRASH
 [
-Call
+Calling
 disconnect
 (
 )
-directly
-should
-not
-crash
-]
-expected
-:
-FAIL
-[
-Stopped
-PressureObserver
-do
-not
-receive
-changes
-]
-expected
-:
-FAIL
-[
-compute_pressure_disconnect
-.
-https
-.
-any
-.
-html
-]
-[
-Call
-disconnect
-(
-)
-directly
+immediately
 should
 not
 crash
