--- a/testing/web-platform/meta/compute-pressure/compute_pressure_disconnect_idempotent.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_disconnect_idempotent.https.window.js.ini
@@ -3,12 +3,17 @@ compute_pressure_disconnect_idempotent
 .
 https
 .
-any
-.
-worker
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
+expected
+:
+ERROR
 [
 Stopped
 PressureObserver
@@ -19,43 +24,19 @@ changes
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 compute_pressure_disconnect_idempotent
 .
 https
 .
-any
-.
-sharedworker
+window
 .
 html
-]
-expected
-:
-if
-tsan
-:
-CRASH
-[
-Stopped
-PressureObserver
-do
-not
-receive
-changes
-]
-expected
-:
-FAIL
-[
-compute_pressure_disconnect_idempotent
-.
-https
-.
-any
-.
-html
+?
+globalScope
+=
+window
 ]
 [
 Stopped
