--- a/testing/web-platform/meta/compute-pressure/compute_pressure_disconnect_immediately.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_disconnect_immediately.https.window.js.ini
@@ -3,15 +3,20 @@ compute_pressure_disconnect_immediately
 .
 https
 .
-any
-.
-worker
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
+expected
+:
+ERROR
 [
 Stopped
-PressureObserver
+PressureObservers
 do
 not
 receive
@@ -19,7 +24,7 @@ changes
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 Removing
 observer
@@ -36,64 +41,23 @@ observers
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 compute_pressure_disconnect_immediately
 .
 https
 .
-any
+window
 .
 html
+?
+globalScope
+=
+window
 ]
 [
 Stopped
-PressureObserver
-do
-not
-receive
-changes
-]
-expected
-:
-FAIL
-[
-Removing
-observer
-before
-observe
-(
-)
-resolves
-does
-not
-affect
-other
-observers
-]
-expected
-:
-FAIL
-[
-compute_pressure_disconnect_immediately
-.
-https
-.
-any
-.
-sharedworker
-.
-html
-]
-expected
-:
-if
-tsan
-:
-CRASH
-[
-Stopped
-PressureObserver
+PressureObservers
 do
 not
 receive
