--- a/testing/web-platform/meta/compute-pressure/compute_pressure_duplicate_updates.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_duplicate_updates.https.window.js.ini
@@ -3,18 +3,17 @@ compute_pressure_duplicate_updates
 .
 https
 .
-any
-.
-sharedworker
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
 expected
 :
-if
-tsan
-:
-CRASH
+ERROR
 [
 Changes
 that
@@ -33,45 +32,19 @@ discarded
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 compute_pressure_duplicate_updates
 .
 https
 .
-any
+window
 .
 html
-]
-[
-Changes
-that
-fail
-the
-"
-has
-change
-in
-data
-"
-test
-are
-discarded
-.
-]
-expected
-:
-FAIL
-[
-compute_pressure_duplicate_updates
-.
-https
-.
-any
-.
-worker
-.
-html
+?
+globalScope
+=
+window
 ]
 [
 Changes
