--- a/testing/web-platform/meta/compute-pressure/compute_pressure_multiple.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_multiple.https.window.js.ini
@@ -3,36 +3,13 @@ compute_pressure_multiple
 .
 https
 .
-any
-.
-sharedworker
+window
 .
 html
-]
-expected
-:
-if
-tsan
-:
-CRASH
-[
-Three
-PressureObserver
-instances
-receive
-changes
-]
-expected
-:
-FAIL
-[
-compute_pressure_multiple
-.
-https
-.
-any
-.
-html
+?
+globalScope
+=
+window
 ]
 [
 Three
@@ -49,12 +26,17 @@ compute_pressure_multiple
 .
 https
 .
-any
-.
-worker
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
+expected
+:
+ERROR
 [
 Three
 PressureObserver
@@ -64,4 +46,4 @@ changes
 ]
 expected
 :
-FAIL
+TIMEOUT
