--- a/testing/web-platform/meta/compute-pressure/compute_pressure_observe_idempotent.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_observe_idempotent.https.window.js.ini
@@ -3,9 +3,13 @@ compute_pressure_observe_idempotent
 .
 https
 .
-any
+window
 .
 html
+?
+globalScope
+=
+window
 ]
 [
 PressureObserver
@@ -24,18 +28,17 @@ compute_pressure_observe_idempotent
 .
 https
 .
-any
-.
-sharedworker
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
 expected
 :
-if
-tsan
-:
-CRASH
+ERROR
 [
 PressureObserver
 .
@@ -47,27 +50,4 @@ idempotent
 ]
 expected
 :
-FAIL
-[
-compute_pressure_observe_idempotent
-.
-https
-.
-any
-.
-worker
-.
-html
-]
-[
-PressureObserver
-.
-observe
-(
-)
-is
-idempotent
-]
-expected
-:
-FAIL
+TIMEOUT
