--- a/testing/web-platform/meta/compute-pressure/compute_pressure_options.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_options.https.window.js.ini
@@ -3,11 +3,13 @@ compute_pressure_options
 .
 https
 .
-any
-.
-worker
+window
 .
 html
+?
+globalScope
+=
+window
 ]
 [
 PressureObserver
@@ -56,10 +58,17 @@ compute_pressure_options
 .
 https
 .
-any
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
+expected
+:
+ERROR
 [
 PressureObserver
 observe
@@ -74,7 +83,7 @@ value
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 PressureObserver
 observe
@@ -86,7 +95,7 @@ sampleInterval
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 PressureObserver
 observe
@@ -101,63 +110,4 @@ range
 ]
 expected
 :
-FAIL
-[
-compute_pressure_options
-.
-https
-.
-any
-.
-sharedworker
-.
-html
-]
-expected
-:
-if
-tsan
-:
-CRASH
-[
-PressureObserver
-observe
-method
-doesnt
-throw
-error
-for
-sampleInterval
-value
-0
-]
-expected
-:
-FAIL
-[
-PressureObserver
-observe
-method
-requires
-a
-positive
-sampleInterval
-]
-expected
-:
-FAIL
-[
-PressureObserver
-observe
-method
-requires
-a
-sampleInterval
-in
-unsigned
-long
-range
-]
-expected
-:
-FAIL
+NOTRUN
