--- a/testing/web-platform/meta/compute-pressure/compute_pressure_update_toJSON.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_update_toJSON.https.window.js.ini
@@ -3,10 +3,17 @@ compute_pressure_update_toJSON
 .
 https
 .
-any
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
+expected
+:
+ERROR
 [
 Basic
 functionality
@@ -14,43 +21,20 @@ test
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 compute_pressure_update_toJSON
 .
 https
 .
-any
-.
-worker
+window
 .
 html
+?
+globalScope
+=
+window
 ]
-[
-Basic
-functionality
-test
-]
-expected
-:
-FAIL
-[
-compute_pressure_update_toJSON
-.
-https
-.
-any
-.
-sharedworker
-.
-html
-]
-expected
-:
-if
-tsan
-:
-CRASH
 [
 Basic
 functionality
