--- a/testing/web-platform/meta/compute-pressure/observe_return_type.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/observe_return_type.https.window.js.ini
@@ -3,40 +3,13 @@ observe_return_type
 .
 https
 .
-any
-.
-sharedworker
+window
 .
 html
-]
-expected
-:
-if
-tsan
-:
-CRASH
-[
-PressureObserver
-.
-observe
-(
-)
-is
-idempotent
-]
-expected
-:
-FAIL
-[
-observe_return_type
-.
-https
-.
-any
-.
-worker
-.
-html
+?
+globalScope
+=
+window
 ]
 [
 PressureObserver
@@ -55,9 +28,13 @@ observe_return_type
 .
 https
 .
-any
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
 [
 PressureObserver
