--- a/testing/web-platform/meta/compute-pressure/compute_pressure_take_records.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_take_records.https.window.js.ini
@@ -3,9 +3,13 @@ compute_pressure_take_records
 .
 https
 .
-any
+window
 .
 html
+?
+globalScope
+=
+window
 ]
 [
 Calling
@@ -39,18 +43,17 @@ compute_pressure_take_records
 .
 https
 .
-any
-.
-sharedworker
+window
 .
 html
+?
+globalScope
+=
+dedicated_worker
 ]
 expected
 :
-if
-tsan
-:
-CRASH
+ERROR
 [
 Calling
 takeRecords
@@ -77,42 +80,4 @@ invoke
 ]
 expected
 :
-FAIL
-[
-compute_pressure_take_records
-.
-https
-.
-any
-.
-worker
-.
-html
-]
-[
-Calling
-takeRecords
-(
-)
-before
-observe
-(
-)
-]
-expected
-:
-FAIL
-[
-takeRecords
-(
-)
-returns
-empty
-record
-after
-callback
-invoke
-]
-expected
-:
-FAIL
+TIMEOUT
