Bug 1922068 [wpt PR 48411] - Update wpt metadata, a=testonly
wpt-pr: 48411
wpt-type: metadata

UltraBlame original commit: 35cdd6c15d2b56fb742f230189622498df8a441d

--- a/testing/web-platform/meta/css/css-pseudo/highlight-cascade/highlight-pseudos-inheritance-computed-001.html.ini
+++ b/testing/web-platform/meta/css/css-pseudo/highlight-cascade/highlight-pseudos-inheritance-computed-001.html.ini
@@ -179,3 +179,37 @@ child2
 expected
 :
 FAIL
+[
+getComputedStyle
+(
+)
+for
+:
+:
+search
+-
+text
+at
+#
+child1
+]
+expected
+:
+FAIL
+[
+getComputedStyle
+(
+)
+for
+:
+:
+search
+-
+text
+at
+#
+child2
+]
+expected
+:
+FAIL
