--- a/testing/web-platform/meta/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed.html.ini
+++ b/testing/web-platform/meta/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed.html.ini
@@ -75,3 +75,37 @@ target2
 expected
 :
 FAIL
+[
+getComputedStyle
+(
+)
+for
+:
+:
+search
+-
+text
+at
+#
+target1
+]
+expected
+:
+FAIL
+[
+getComputedStyle
+(
+)
+for
+:
+:
+search
+-
+text
+at
+#
+target2
+]
+expected
+:
+FAIL
