--- a/testing/web-platform/meta/css/css-inline/initial-letter/initial-letter-sunk-initial.html.ini
+++ b/testing/web-platform/meta/css/css-inline/initial-letter/initial-letter-sunk-initial.html.ini
@@ -12,3 +12,60 @@ html
 expected
 :
 FAIL
+[
+initial
+-
+letter
+-
+sunk
+-
+initial
+.
+html
+?
+class
+=
+no
+-
+descent
+]
+expected
+:
+FAIL
+[
+initial
+-
+letter
+-
+sunk
+-
+initial
+.
+html
+?
+class
+=
+]
+expected
+:
+FAIL
+[
+initial
+-
+letter
+-
+sunk
+-
+initial
+.
+html
+?
+class
+=
+no
+-
+ascent
+]
+expected
+:
+FAIL
