Bug 1922399 - [wpt-sync] Update web-platform-tests to 0868167e971bca60fdc5ce8552fcd0388ac5497c, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 0868167e971bca60fdc5ce8552fcd0388ac5497c
wpt-type: landing

UltraBlame original commit: 3d0f69faa1f3cfcaa1dd432178d1710b93a0f787

--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp.https.window.js.ini
@@ -14,6 +14,55 @@ dedicated_worker
 expected
 :
 if
+fission
+and
+debug
+and
+(
+os
+=
+=
+"
+win
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+ERROR
+TIMEOUT
+]
+if
+not
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+ERROR
+CRASH
+]
+if
+not
+fission
+and
 (
 os
 =
@@ -24,7 +73,7 @@ linux
 )
 and
 not
-fission
+debug
 :
 [
 ERROR
