--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_continuously_increasing.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_continuously_increasing.https.window.js.ini
@@ -41,6 +41,8 @@ dedicated_worker
 expected
 :
 if
+debug
+and
 (
 os
 =
@@ -49,8 +51,6 @@ os
 win
 "
 )
-and
-debug
 and
 (
 processor
@@ -64,6 +64,25 @@ x86_64
 [
 ERROR
 TIMEOUT
+]
+if
+debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
+:
+[
+ERROR
+CRASH
 ]
 ERROR
 [
