--- a/testing/web-platform/meta/content-security-policy/frame-ancestors/__dir__.ini
+++ b/testing/web-platform/meta/content-security-policy/frame-ancestors/__dir__.ini
@@ -16,6 +16,7 @@ Alloc
 AllocateProtoAndIfaceCache
 CreateFunction
 CreateInterfaceObject
+CreateNativeGlobalForInner
 Define
 DefineAccessorPropertyById
 DefineDataProperty
@@ -28,6 +29,7 @@ JS
 :
 :
 Call
+MaybeEnterInterpreterTrampoline
 NativeDefineDataProperty
 NativeLookupOwnPropertyInline
 NewArray
@@ -40,6 +42,10 @@ raw_vec
 finish_grow
 atomizeAndCopyCharsNonStaticValidLength
 ensureTable
+js
+:
+:
+Call
 js
 :
 :
@@ -255,6 +261,7 @@ nsPresContext
 NotifyContentfulPaint
 operator
 pod_arena_realloc
+setInternal
 unknown
 stack
 xpc
