--- a/testing/web-platform/meta/fetch/api/basic/conditional-get.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/basic/conditional-get.any.js.ini
@@ -45,6 +45,31 @@ any
 html
 ]
 [
+Testing
+conditional
+GET
+with
+ETags
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+[
 conditional
 -
 get
