--- a/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-cross-origin.sub.html.ini
+++ b/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-cross-origin.sub.html.ini
@@ -30,6 +30,7 @@ debug
 :
 [
 OK
+TIMEOUT
 ERROR
 ]
 [
@@ -52,9 +53,6 @@ iframes
 expected
 :
 if
-not
-asan
-and
 (
 os
 =
@@ -81,24 +79,48 @@ FAIL
 PASS
 ]
 if
-not
-asan
-and
 (
 os
 =
 =
 "
-linux
+win
 "
 )
 and
 not
-fission
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+TIMEOUT
 ]
 [
 PASS
