--- a/testing/web-platform/meta/html/browsers/browsing-the-web/history-traversal/history-traversal-navigate-parent-while-child-loading.html.ini
+++ b/testing/web-platform/meta/html/browsers/browsing-the-web/history-traversal/history-traversal-navigate-parent-while-child-loading.html.ini
@@ -34,27 +34,11 @@ back
 expected
 :
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 not
 asan
 and
 debug
 and
-fission
-:
-[
-PASS
-FAIL
-]
-if
 (
 os
 =
@@ -63,8 +47,6 @@ os
 win
 "
 )
-and
-debug
 and
 (
 processor
@@ -80,6 +62,11 @@ PASS
 FAIL
 ]
 if
+not
+asan
+and
+debug
+and
 (
 os
 =
@@ -89,6 +76,13 @@ linux
 "
 )
 and
+fission
+:
+[
+PASS
+FAIL
+]
+if
 asan
 :
 [
