--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/preserves-pitch.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/preserves-pitch.html.ini
@@ -33,6 +33,22 @@ os
 =
 =
 "
+mac
+"
+)
+and
+debug
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
 android
 "
 )
@@ -79,6 +95,22 @@ not
 tsan
 :
 NOTRUN
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
+]
 [
 The
 default
@@ -115,6 +147,22 @@ not
 tsan
 :
 NOTRUN
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
+]
 [
 Speed
 -
@@ -150,6 +198,22 @@ not
 tsan
 :
 NOTRUN
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
+]
 [
 Speed
 -
@@ -186,6 +250,22 @@ not
 tsan
 :
 NOTRUN
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
+]
 [
 The
 default
@@ -217,6 +297,22 @@ not
 tsan
 :
 TIMEOUT
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
+]
 [
 Slow
 -
@@ -253,3 +349,44 @@ not
 tsan
 :
 NOTRUN
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
+]
+[
+Setup
+Audio
+element
+and
+AudioContext
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+TIMEOUT
+]
