--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -32,8 +32,36 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
+debug
+and
+not
+asan
+and
 tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 (
 processor
@@ -63,9 +91,6 @@ linux
 "
 )
 and
-not
-tsan
-and
 (
 processor
 =
@@ -92,73 +117,10 @@ win
 )
 and
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
+FAIL
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-FAIL
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-[
-PASS
-FAIL
 ]
 [
 The
@@ -187,8 +149,36 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
+debug
+and
+not
+asan
+and
 tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 (
 processor
@@ -218,9 +208,6 @@ linux
 "
 )
 and
-not
-tsan
-and
 (
 processor
 =
@@ -247,73 +234,10 @@ win
 )
 and
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
+FAIL
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-FAIL
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-[
-PASS
-FAIL
 ]
 [
 The
@@ -342,8 +266,36 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
+debug
+and
+not
+asan
+and
 tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 (
 processor
@@ -373,9 +325,6 @@ linux
 "
 )
 and
-not
-tsan
-and
 (
 processor
 =
@@ -402,73 +351,10 @@ win
 )
 and
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
+FAIL
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-FAIL
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-[
-PASS
-FAIL
 ]
 [
 The
@@ -495,8 +381,36 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
+debug
+and
+not
+asan
+and
 tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 (
 processor
@@ -526,9 +440,6 @@ linux
 "
 )
 and
-not
-tsan
-and
 (
 processor
 =
@@ -555,73 +466,10 @@ win
 )
 and
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
+FAIL
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-FAIL
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-[
-PASS
-FAIL
 ]
 [
 The
@@ -644,8 +492,36 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
+debug
+and
+not
+asan
+and
 tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 (
 processor
@@ -675,9 +551,6 @@ linux
 "
 )
 and
-not
-tsan
-and
 (
 processor
 =
@@ -704,71 +577,8 @@ win
 )
 and
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
+FAIL
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-FAIL
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-[
-PASS
-FAIL
 ]
