--- a/testing/web-platform/meta/intersection-observer/display-none.html.ini
+++ b/testing/web-platform/meta/intersection-observer/display-none.html.ini
@@ -13,9 +13,73 @@ none
 expected
 :
 if
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+tsan
+and
+asan
+:
+[
+PASS
+FAIL
+]
+if
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+tsan
+and
 not
 asan
-and
+:
+[
+PASS
+FAIL
+]
+if
 not
 fission
 and
@@ -27,16 +91,6 @@ os
 linux
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-asan
-and
-not
-fission
 :
 [
 PASS
