--- a/testing/web-platform/meta/intersection-observer/scroll-margin-non-scrolling-root.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-non-scrolling-root.html.ini
@@ -20,6 +20,8 @@ intersection
 expected
 :
 if
+fission
+and
 (
 os
 =
@@ -30,35 +32,31 @@ linux
 )
 and
 not
-fission
-and
 debug
-:
-[
-PASS
-FAIL
-]
-if
+and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-fission
+asan
 and
 not
-debug
+tsan
 :
 [
 PASS
 FAIL
 ]
 if
+not
+fission
+and
 (
 os
 =
@@ -70,6 +68,23 @@ android
 and
 not
 debug
+:
+[
+PASS
+FAIL
+]
+if
+not
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 :
 [
 PASS
