--- a/testing/web-platform/meta/media-source/mediasource-endofstream.html.ini
+++ b/testing/web-platform/meta/media-source/mediasource-endofstream.html.ini
@@ -61,42 +61,12 @@ win
 )
 and
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
 OK
+TIMEOUT
 CRASH
 ]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-TIMEOUT
 if
 os
 =
@@ -164,17 +134,11 @@ win
 )
 and
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
+[
+PASS
 TIMEOUT
+]
 if
 os
 =
