--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.request-header.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.request-header.tentative.https.window.js.ini
@@ -27,15 +27,6 @@ linux
 "
 )
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 asan
 and
 fission
@@ -53,6 +44,25 @@ os
 linux
 "
 )
+and
+asan
+and
+not
+fission
+:
+TIMEOUT
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+asan
 and
 (
 processor
