--- a/testing/web-platform/meta/xhr/send-sync-response-event-order.htm.ini
+++ b/testing/web-platform/meta/xhr/send-sync-response-event-order.htm.ini
@@ -11,21 +11,31 @@ order
 .
 htm
 ]
+[
+XMLHttpRequest
+:
+The
+send
+(
+)
+method
+:
+event
+order
+when
+synchronous
+flag
+is
+set
+]
 expected
 :
 if
-(
-os
-=
-=
-"
-android
-"
-)
+asan
 and
 fission
 :
 [
-OK
-TIMEOUT
+PASS
+FAIL
 ]
