--- a/testing/web-platform/meta/intersection-observer/grow-height-and-scrolled.html.ini
+++ b/testing/web-platform/meta/intersection-observer/grow-height-and-scrolled.html.ini
@@ -29,6 +29,40 @@ scrolled
 expected
 :
 if
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+asan
+and
+not
+tsan
+:
+[
+PASS
+FAIL
+]
+if
 not
 fission
 and
