--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -6568,6 +6568,35 @@ js
 ]
 [
 "
+test_tls_handshake_timing
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+"
+"
+os
+=
+=
+'
+win
+'
+"
+]
+[
+"
 test_tls_server
 .
 js
