--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -85367,6 +85367,54 @@ mirror
 :
 always
 #
+When
+true
+we
+check
+if
+the
+cname
+is
+the
+same
+as
+the
+target
+name
+of
+the
+record
+.
+#
+If
+not
+the
+record
+will
+not
+be
+used
+.
+-
+name
+:
+network
+.
+dns
+.
+https_rr
+.
+check_record_with_cname
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
 This
 preference
 can
