Backed out 2 changesets (bug 1920463) for causing multiple failures. CLOSED TREE
Backed out changeset e56421ffea4f (bug 1920463)
Backed out changeset 3c3f9787cfe4 (bug 1920463)

UltraBlame original commit: 4e0648d30b78e29bd9da980f79c53dbfef09f82e

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -2286,6 +2286,47 @@ main
 thread
 .
 [
+PRemoteSandboxBroker
+:
+:
+LaunchApp
+]
+description
+=
+Synchronous
+launch
+of
+a
+child
+process
+that
+in
+turn
+launches
+and
+sandboxes
+another
+process
+.
+Called
+on
+a
+dedicated
+thread
+and
+targets
+a
+dedicated
+process
+so
+this
+shouldn
+'
+t
+block
+anything
+.
+[
 PSandboxTesting
 :
 :
