Bug 1922782 - convert some skip-if conditions for mac on mochitest-plain to be longer form. r=aryx,media-playback-reviewers,padenot
Differential Revision: https://phabricator.services.mozilla.com/D224600

UltraBlame original commit: b93cf8719b1526a97ed5f3d7fabb679425fd4feb

--- a/dom/base/test/fullscreen/mochitest.toml
+++ b/dom/base/test/fullscreen/mochitest.toml
@@ -313,6 +313,24 @@ mac
 '
 &
 &
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
 "
 ]
@@ -370,6 +388,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
