--- a/dom/base/test/mochitest.toml
+++ b/dom/base/test/mochitest.toml
@@ -5050,33 +5050,6 @@ bug
 ]
 [
 "
-test_copypaste_shadow_dom
-.
-html
-"
-]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-android
-'
-"
-"
-headless
-"
-#
-bug
-904183
-]
-[
-"
 test_copypaste
 .
 xhtml
@@ -5123,6 +5096,33 @@ apz_test_utils
 .
 js
 "
+]
+[
+"
+test_copypaste_shadow_dom
+.
+html
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+"
+"
+headless
+"
+#
+bug
+904183
 ]
 [
 "
@@ -5919,6 +5919,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 "
