--- a/dom/events/test/mochitest.toml
+++ b/dom/events/test/mochitest.toml
@@ -2098,6 +2098,24 @@ os
 '
 mac
 '
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 tags
@@ -2976,6 +2994,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
