--- a/dom/html/test/forms/mochitest.toml
+++ b/dom/html/test/forms/mochitest.toml
@@ -418,6 +418,20 @@ test_input_number_mouse_events
 html
 "
 ]
+run
+-
+if
+=
+[
+"
+os
+!
+=
+'
+android
+'
+"
+]
 #
 Not
 run
@@ -442,15 +456,25 @@ os
 =
 =
 '
-android
-'
-"
-"
-os
-=
-=
-'
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -821,6 +845,24 @@ os
 '
 mac
 '
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 [
@@ -841,6 +883,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
