--- a/dom/media/mediasource/test/mochitest.toml
+++ b/dom/media/mediasource/test/mochitest.toml
@@ -2170,6 +2170,13 @@ mp4
 ]
 [
 "
+test_BufferedSeekCanPlayThrough
+.
+html
+"
+]
+[
+"
 test_BufferingWait
 .
 html
@@ -2219,13 +2226,6 @@ html
 ]
 [
 "
-test_eviction_target_not_in_buffered_range
-.
-html
-"
-]
-[
-"
 test_ExperimentalAsync
 .
 html
@@ -2260,6 +2260,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -2409,7 +2427,7 @@ html
 ]
 [
 "
-test_BufferedSeekCanPlayThrough
+test_eviction_target_not_in_buffered_range
 .
 html
 "
