--- a/dom/media/test/mochitest.toml
+++ b/dom/media/test/mochitest.toml
@@ -7827,6 +7827,24 @@ os
 '
 mac
 '
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 1517199
@@ -7842,23 +7860,26 @@ os
 =
 =
 '
-linux
+mac
 '
-"
-#
-1713397
-1719881
-(
-high
-intermittent
-failure
-on
-linux
-tsan
-)
-1776937
-"
-apple_silicon
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
@@ -7880,6 +7901,26 @@ in
 failures
 "
 jobs
+"
+os
+=
+=
+'
+linux
+'
+"
+#
+1713397
+1719881
+(
+high
+intermittent
+failure
+on
+linux
+tsan
+)
+1776937
 "
 mda_gpu
 "
@@ -8471,6 +8512,53 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+#
+Bug
+1110922
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
 '
 "
 #
