--- a/dom/push/test/mochitest.toml
+++ b/dom/push/test/mochitest.toml
@@ -99,14 +99,6 @@ if
 "
 true
 "
-"
-os
-=
-=
-'
-android
-'
-"
 ]
 [
 "
@@ -184,40 +176,8 @@ if
 =
 [
 "
-os
-=
-=
-'
-android
-'
+true
 "
-"
-os
-=
-=
-'
-win
-'
-"
-"
-os
-=
-=
-'
-linux
-'
-"
-"
-os
-=
-=
-'
-mac
-'
-"
-#
-Bug
-1274773
 ]
 [
 "
@@ -325,53 +285,6 @@ if
 "
 true
 "
-"
-os
-=
-=
-'
-android
-'
-"
-"
-os
-=
-=
-'
-win
-'
-"
-#
-Bug
-1373346
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-"
-#
-Bug
-1578374
-"
-os
-=
-=
-'
-mac
-'
-"
-#
-Bug
-1578333
 ]
 [
 "
