--- a/dom/tests/mochitest/bugs/mochitest.toml
+++ b/dom/tests/mochitest/bugs/mochitest.toml
@@ -1273,19 +1273,20 @@ test_resize_move_windows
 html
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 os
-=
+!
 =
 '
 android
 '
 "
+]
 #
 Windows
 can
@@ -1297,6 +1298,11 @@ and
 position
 on
 Android
+skip
+-
+if
+=
+[
 "
 os
 =
@@ -1316,6 +1322,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
