--- a/dom/media/webaudio/test/mochitest.toml
+++ b/dom/media/webaudio/test/mochitest.toml
@@ -1017,20 +1017,18 @@ test_analyserNode
 html
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
-asan
-&
-&
 os
-!
 =
+=
+'
 android
+'
 "
 ]
 #
@@ -1045,8 +1043,6 @@ platform
 tests
 except
 on
-ASan
-and
 Android
 which
 don
@@ -1062,20 +1058,18 @@ test_analyserNodeMinimum
 html
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
-asan
-&
-&
 os
-!
 =
+=
+'
 android
+'
 "
 ]
 #
@@ -1090,8 +1084,6 @@ platform
 tests
 except
 on
-ASan
-and
 Android
 which
 don
@@ -1107,20 +1099,18 @@ test_analyserNodeOutput
 html
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
-asan
-&
-&
 os
-!
 =
+=
+'
 android
+'
 "
 ]
 #
@@ -1135,8 +1125,6 @@ platform
 tests
 except
 on
-ASan
-and
 Android
 which
 don
@@ -1159,20 +1147,18 @@ test_analyserNodeWithGain
 html
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
-asan
-&
-&
 os
-!
 =
+=
+'
 android
+'
 "
 ]
 #
@@ -1187,8 +1173,6 @@ platform
 tests
 except
 on
-ASan
-and
 Android
 which
 don
@@ -1204,20 +1188,18 @@ test_analyserScale
 html
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
-asan
-&
-&
 os
-!
 =
+=
+'
 android
+'
 "
 ]
 #
@@ -1232,8 +1214,6 @@ platform
 tests
 except
 on
-ASan
-and
 Android
 which
 don
@@ -1346,25 +1326,21 @@ are
 not
 run
 with
-ASan
-or
 Android
 builds
 .
-skip
+run
 -
 if
 =
 [
 "
-!
-asan
-&
-&
 os
-!
 =
+=
+'
 android
+'
 "
 ]
 [
@@ -1635,25 +1611,21 @@ are
 not
 run
 with
-ASan
-or
 Android
 builds
 .
-skip
+run
 -
 if
 =
 [
 "
-!
-asan
-&
-&
 os
-!
 =
+=
+'
 android
+'
 "
 ]
 [
