Bug 1905529 - [devtools] Skip browser_rules_preview-tooltips-sizes.js on linux opt for frequent failures r=devtools-reviewers,bomsy
Differential Revision: https://phabricator.services.mozilla.com/D224929

UltraBlame original commit: 3c4e941c5578d1874bae9f523a86b2f9a0364891

--- a/devtools/client/inspector/rules/test/browser_part2.toml
+++ b/devtools/client/inspector/rules/test/browser_part2.toml
@@ -1534,6 +1534,26 @@ sizes
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+opt
+"
+]
+#
+Bug
+1905529
 [
 "
 browser_rules_print_media_simulation
